@@ -1,3 +1,12 @@
+2004-08-08  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/Variable.pm (%_primary_dict): New hash.
+	(_new, variable_delete): Update %_primary_dict.
+	(variables): Accept an optional $suffix argument.
+	* automake.in (check_typos, am_primary_prefixes): Use that
+	optional argument to restrict the loops over the variables we are
+	interested in.
+
 2004-08-06  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/Automake/Item.pm (def): Rewrite more concisely, it's faster
